<?php die(); ?>
Akeeba Panopticon 1.3.1
================================================================================
# [MEDIUM] PHP error trying to log in with a username that doesn't exist

Akeeba Panopticon 1.3.0
================================================================================
+ Domain registration and expiration warnings
+ Force MFA for specific user groups, superusers, or administrators [gh-723]
+ Option to treat MFA failures as login failures [gh-723]
+ Enforce a maximum number of MFA attempts [gh-723]
+ Accurate PHP CLI path in the CRON job setup page
+ Improve update installation [gh-803]
# [HIGH] Cannot connect to really old WordPress installations (WordPress 5.5 and earlier)
# [HIGH] Cannot connect to old Akeeba Backup for WordPress (version 7)
# [HIGH] PHP error when WordPress fails to provide version information
# [LOW] Connection Doctor causes misleading reports on WordPress [gh-807]

Akeeba Panopticon 1.2.2
================================================================================
+ Optional environment variables-only configuration of containerized Panopticon [gh-696]
+ Clear the cache when relinking a site to Akeeba Backup
~ Do not log CMS Update Found more than once per version
# [MEDIUM] Repeated emails for WordPress plugin updates
# [LOW] Wrong lang string used in WordPress plugin/theme update emails
# [LOW] PHP warnings running Connection Doctor on WordPress sites
# [LOW] Wrong "email" label on Backup options [gh-771]

Akeeba Panopticon 1.2.1
================================================================================
! Fixing a chicken and egg issue not allowing the update to proceed correctly

Akeeba Panopticon 1.2.0
================================================================================
+ WordPress support [gh-38]
+ Much improved Docker support [gh-697]
+ Translatable dates
+ Load TinyMCE translations
+ Batch processing sites
+ Control email sending for scheduled backups [gh-712]