@@ -329,6 +329,13 @@ PANOPTICON_MAX_EXECUTION=60
 # Execution Time we will not try to execute another task to avoid a timeout.
 PANOPTICON_EXECUTION_BIAS=75
 
+# Accurate PHP-CLI path
+# Enable to have Akeeba Panopticon try to detect the accurate PHP-CLI path on
+# your server. Disable if your server does not allow you to do that, locking
+# your IP address out of your site for several minutes to hours when this
+# happens (for example IONOS).
+PANOPTICON_ACCURATE_PHP_CLI=1
+
 ## =============================================================================
 ## Site Operations
 ## =============================================================================
