@@ -9,6 +9,7 @@ defined('AKEEBA') || die;
 
 ?>
 @include('Setup/cron', [
-	'hideWhatsNext' => true,
-	'ctaLangString' => 'PANOPTICON_MAIN_CRON_SUBHEAD_CTA'
+	'hideWhatsNext'      => true,
+	'ctaLangString'      => 'PANOPTICON_MAIN_CRON_SUBHEAD_CTA',
+	'disablePhpAccurate' => false,
 ])
