@@ -1337,6 +1337,8 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_WEBCRON_KEY="Web CRON Key"
 PANOPTICON_SYSCONFIG_LBL_FIELD_CRON_STUCK_THRESHOLD="Stuck Task Threshold"
 PANOPTICON_SYSCONFIG_LBL_FIELD_MAX_EXECUTION="Maximum Execution Time"
 PANOPTICON_SYSCONFIG_LBL_FIELD_EXECUTION_BIAS="Execution Time Bias"
+PANOPTICON_SYSCONFIG_LBL_FIELD_ACCURATE_PHP_CLI="Accurate PHP-CLI path"
+PANOPTICON_SYSCONFIG_LBL_FIELD_ACCURATE_PHP_CLI_HELP="Enable to have Akeeba Panopticon try to detect the accurate PHP-CLI path on your server. Disable if your server does not allow you to do that, locking your IP address out of your site for several minutes to hours when this happens (for example IONOS)."
 PANOPTICON_SYSCONFIG_LBL_FIELD_SITEINFO_FREQ="Frequency of Site Information Collection"
 PANOPTICON_SYSCONFIG_LBL_FIELD_CACHING_TIME="Default Cache Time"
 PANOPTICON_SYSCONFIG_LBL_FIELD_CACHE_ADAPTER="Storage"
