@@ -1,6 +1,7 @@
 <?php die(); ?>
 Akeeba Panopticon 1.3.1
 ================================================================================
+~ Make accurate PHP CLI path detection optional
 # [MEDIUM] PHP error trying to log in with a username that doesn't exist
 
 Akeeba Panopticon 1.3.0
